labs/trainer/ctr-exercise-rest/src/main/k8s/exercise_06/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise
spec:
  selector:
    matchLabels:
      name: exercise
  template:
    metadata:
      labels:
        name: exercise
    spec:
      containers:
      - name: rest-exercise
        image: gedoplan-seminar/ctr-exercise-rest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9990
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9990
          initialDelaySeconds: 10
