labs/trainer/ctr-exercise-rest/src/main/k8s/exercise_06/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  exercise-db
spec:
  serviceName: exercise-db
  selector:
    matchLabels:
      name: exercise-db
  volumeClaimTemplates:
    - metadata:
        name: exercise-db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Mi
  template:
    metadata:
      labels:
        name:  exercise-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.3
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: exercise-db
