labs/trainer/ctr-exercise-rest/src/main/k8s/exercise_06/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise
spec:
  rules:
  - host: exercise.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-exercise
            port:
              name: web
